Bug 319177 - adblock frame blocker does not auto-load URL
Summary: adblock frame blocker does not auto-load URL
Status: RESOLVED FIXED
Alias: None
Product: kwebkitpart
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: webkit-bugs-null
URL: http://www.mangareader.net/five-star-...
Keywords:
Depends on:
Blocks:
 
Reported: 2013-05-01 14:15 UTC by railmaniac
Modified: 2013-05-27 21:07 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.3.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description railmaniac 2013-05-01 14:15:24 UTC
The functionality of blocking iframes in a page is crippled, as when you try to block that frame the URL field is blank and the OK button is disabled. Also, unlike firefox, there is no right-click option for "frame info", so you cannot find the iframe URL without going through the source code. 

In any case, I shouldn't have to give the browser information that it already has.

Reproducible: Always

Steps to Reproduce:
1. Go to a page with iframes, like the example URL above
2. Right click on the iframe adds select "frame -> block iframe"
3. The iframe blocking popup window shows up with URL field blank and the OK button disabled.
Actual Results:  
The iframe blocking popup window shows up with URL field blank and the OK button disabled.

Expected Results:  
The iframe blocking popup window should have the URL field populated with url of iframe.

Host system is Archlinux x86-64 with updated packages.

Kernel 3.8.10-1

KDE 4.10.2

Konqueror is using webkit as default engine.
Comment 1 Dawit Alemayehu 2013-05-27 21:07:57 UTC
Git commit d399ced901bad73093a4c68804e0d934933bf1eb by Dawit Alemayehu.
Committed on 27/05/2013 at 20:09.
Pushed by adawit into branch '1.3'.

Fixed context based ad blocking for iframe objects.
FIXED-IN: 1.3.4

M  +6    -4    src/kwebkitpart_ext.cpp

http://commits.kde.org/kwebkitpart/d399ced901bad73093a4c68804e0d934933bf1eb