Fixed context based ad blocking for iframe objects.

BUG: 319177
FIXED-IN: 1.3.4